Header HTML and styles added

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,3 +5,59 @@
   padding: 0;
   margin: 0;
 }
+
+html {
+  font-family: "Roboto", sans-serif;
+  font-size: 62.5%;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #333;
+}
+
+body {
+  font-size: 1.6rem;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+/* ----- HEADER ------*/
+header {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+nav {
+  max-width: 1024px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2rem 1rem;
+}
+
+nav ul {
+  width: 100%;
+  margin-left: 2vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+nav ul li {
+  font-weight: 400;
+  margin: 0 5%;
+}
+
