--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,6 +60,140 @@ nav ul li {
   margin: 0 5%;
 }
 
+/* MAIN PART */
+main {
+  background: linear-gradient(-45deg, #081f37, #5fc9f3, #2e79ba, #1e549f);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0 50%;
+  }
+}
+
+.wrapper {
+  max-width: 1440px;
+  margin: auto;
+  padding: 5rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 350px));
+  gap: 2.5rem;
+  justify-content: center;
+  place-items: center;
+}
+
+.wrapper__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  max-width: 350px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.wrapper__card:hover {
+  transform: scale(1.01);
+  transition: all 0.1s ease-out;
+}
+
+.wrapper__card__img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.wrapper__card__details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.wrapper__card__details__title {
+  font-size: 1.6rem;
+}
+
+.wrapper__card__details__likes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper__card__details__likes-btn {
+  font-size: 2rem;
+  background-color: #fff;
+  border-radius: 10px;
+  border-style: none;
+  color: white;
+  -webkit-text-stroke: 1px darkgray;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.wrapper__card__details__likes-btn:hover {
+  transform: scale(1.1);
+  color: red;
+  -webkit-text-stroke: unset;
+}
+
+.likes-btn--active {
+  font-size: 2rem;
+  background-color: #fff;
+  border-radius: 10px;
+  border-style: none;
+  color: red;
+  -webkit-text-stroke: unset;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.likes-btn--active:hover {
+  transform: scale(1.1);
+}
+
+.wrapper__card__comments-btn,
+.card__btn {
+  width: 100%;
+  height: 40px;
+  margin-top: 1rem;
+  font-weight: 600;
+  color: white;
+  background-color: dodgerblue;
+  border-style: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.card-btn:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.01);
+}
+
+.card-btn:active {
+  background-color: royalblue;
+}
+
 /* FOOTER */
 
 footer {
