--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ main {
   height: 200px;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
 
@@ -192,6 +192,181 @@ main {
 
 .card-btn:active {
   background-color: royalblue;
+}
+
+/* POPUP */
+.pop-up--active {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3vh 0;
+  background: linear-gradient(-45deg, #081f37, #5fc9f3, #2e79ba, #1e549f);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  z-index: 50;
+}
+
+.hidden {
+  display: none;
+}
+
+.pop-up__container {
+  position: relative;
+  width: 90%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 2rem;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+.pop-up__container__close-btn {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  font-size: 2rem;
+  font-weight: 900;
+  border-radius: 10px;
+  border-style: none;
+  color: darkgray;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  text-shadow: 0 0 30px darkgray;
+}
+
+.pop-up__container__close-btn:hover {
+  color: orangered;
+  transform: rotate(180deg) scale(1.1);
+}
+
+.pop-up__container__img {
+  width: 80%;
+  max-width: 450px;
+  height: 40%;
+  min-height: 200px;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+}
+
+.pop-up__container__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.pop-up__container__content__title,
+h3 {
+  font-size: 2rem;
+  margin: 1rem auto;
+}
+
+.pop-up__container__content__details {
+  width: 100%;
+  display: grid;
+  grid-auto-columns: 1fr 1fr;
+  grid-template-areas:
+    "1 3"
+    "2 4";
+  column-gap: 1rem;
+  font-size: 1.6rem;
+  padding: 0 1rem;
+}
+
+.bold-text {
+  font-weight: 600;
+}
+
+.pop-up__container__log {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0 1rem;
+}
+
+.pop-up__container__log__entries {
+  width: 100%;
+  max-height: 120px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+.pop-up__btn {
+  width: 100%;
+  height: 40px;
+  margin-top: 1rem;
+  font-weight: 600;
+  color: white;
+  font-size: 1.6rem;
+  background-color: dodgerblue;
+  border-style: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.pop-up__btn:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.01);
+}
+
+.pop-up__btn:active {
+  background-color: royalblue;
+}
+
+.pop-up__container__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0 1rem;
+}
+
+.pop-up__container__form form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1.6rem;
+}
+
+form input {
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  border-style: solid;
+  padding: 0 1rem;
+  font-size: 1.4rem;
+}
+
+form textarea {
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+  border-style: solid;
+  padding: 1rem;
+  font-size: 1.4rem;
+  resize: none;
 }
 
 /* FOOTER */
